--- a/src/CMS.css
+++ b/src/CMS.css
@@ -1,3 +1,41 @@
+.App {
+	text-align: center;
+ }
+ 
+ .App-logo {
+	/* height: 40vmin; */
+	pointer-events: none;
+ }
+ 
+ @media (prefers-reduced-motion: no-preference) {
+	.App-logo {
+	  animation: App-logo-spin infinite 20s linear;
+	}
+ }
+ 
+ .App-header {
+	background-color: #282c34;
+	min-height: 10vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
+ }
+ 
+ .App-link {
+	color: #61dafb;
+ }
+ 
+ @keyframes App-logo-spin {
+	from {
+	  transform: rotate(0deg);
+	}
+	to {
+	  transform: rotate(360deg);
+	}
+ }
 @font-face {
 	font-family: Bitter;
 	font-style: normal;
@@ -10,7 +48,7 @@
 }
 @font-face {
 	font-family: Bitter;
-	font-style: normal;
+	font-style: bold;
 	font-weight: 700;
 	src: url(/node_modules/@cmsgov/design-system/dist/fonts/Bitter-Bold.eot);
 	src: url(/node_modules/@cmsgov/design-system/dist/fonts/Bitter-Bold.eot?#iefix) format("embedded-opentype"),
