--- a/src/CMS.css
+++ b/src/CMS.css
@@ -10,12 +10,13 @@
  @media (prefers-reduced-motion: no-preference) {
 	.App-logo {
 	  animation: App-logo-spin infinite 20s linear;
+	  max-height: 5vw;
 	}
  }
  
  .App-header {
 	background-color: #282c34;
-	min-height: 10vh;
+	/* min-height: 10vh; */
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -23,7 +24,14 @@
 	font-size: calc(10px + 2vmin);
 	color: white;
  }
- 
+
+ .App-footer{
+	background-color: #282c34;
+	position:absolute;
+	bottom: 0;
+	width:100%;font-size: calc(10px + 2vmin);
+ }
+
  .App-link {
 	color: #61dafb;
  }
