body margin to 0

--- a/src/CMS.css
+++ b/src/CMS.css
@@ -1,27 +1,31 @@
+Body{
+	margin: 0;
+}
+
 .App {
 	text-align: center;
+	align-items: center;
+
  }
  
  .App-logo {
-	/* height: 40vmin; */
 	pointer-events: none;
  }
  
  @media (prefers-reduced-motion: no-preference) {
 	.App-logo {
 	  animation: App-logo-spin infinite 20s linear;
-	  max-height: 5vw;
+	  height: 10vw;
 	}
  }
  
  .App-header {
 	background-color: #282c34;
-	/* min-height: 10vh; */
+	min-height: 15vh;
 	display: flex;
 	flex-direction: column;
-	align-items: center;
 	justify-content: center;
-	font-size: calc(10px + 2vmin);
+	font-size: calc(5px + 2vmin);
 	color: white;
  }
 
@@ -29,7 +33,8 @@
 	background-color: #282c34;
 	position:absolute;
 	bottom: 0;
-	width:100%;font-size: calc(10px + 2vmin);
+	width:100%;
+	font-size: calc(10px + 2vmin);
  }
 
  .App-link {
