--- a/src/CMS.css
+++ b/src/CMS.css
@@ -1,31 +1,49 @@
-Body{
+html, body {
 	margin: 0;
+	height: 100%;
 	font-family: "Open Sans";
-}
+	position: relative;
+ }
 
  .App-logo {
 	pointer-events: none;
 	margin: 20px;
  }
+
  
  @media (prefers-reduced-motion: no-preference) {
 	.App-logo {
 	  /* animation: App-logo-spin infinite 20s linear; */
 	  height: 10vh;
+	  width: auto;
 	}
  }
  
+iframe{            
+	width:100%;
+	height: 100vh;
+	overflow: scroll;
+	padding-bottom: 5%;
+
+}
+
  .App-header {
 	background-color: #282c34;
-	min-height: 15vh;
+	top:0;
+	min-height: 10vh;
 	font-size: calc(5px + 2vmin);
 	color: white;
 	text-align: center;
+	position: sticky;
+	z-index: 999;
+
+	
  }
 
 .App-body{
 	 margin: 5vh 5vw;
 	 max-height: 100%;
+	 padding-bottom: 5%;
  }
 
 footer{
@@ -33,7 +51,7 @@ footer{
 	bottom: 0;
 	width:100%;
 	position:fixed;
-	font-size: calc(10px + 2vmin);
+	font-size: calc(5px + 2vmin);
 	text-align: center;
  }
 
@@ -802,7 +820,7 @@ footer{
 }
 .ds-c-link,
 a {
-	color: #0071bc;
+	color: white;
 	cursor: pointer;
 	text-decoration: none;
 }
@@ -2508,6 +2526,9 @@ select.ds-c-field[multiple] {
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
+	margin: 5%;
+	position: relative;
+	 
 }
 .ds-c-tabs,
 .ds-c-tabs__panel {
